trying to fix form elements on mobile safari
text fields and buttons

--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -226,6 +226,7 @@ input[type=email],
 textarea {
   width: 100%;
   border: 0px;
+  border-radius: 0;
   margin-top: 7px;
   background-color: $dark-grey;
   color: #fff;
@@ -262,6 +263,9 @@ input[type=submit] {
   color: #000;
   display: inline-block;
   cursor: pointer;
+  border-radius: 0;
+  -webkit-border-radius: 0;  
+  -webkit-appearance: none;
 }
 
 input[type=submit]:hover {
