--- a/style.css
+++ b/style.css
@@ -6168,6 +6168,7 @@ input[type=email],
 textarea {
   width: 100%;
   border: 0px;
+  border-radius: 0;
   margin-top: 7px;
   background-color: #3A3A3A;
   color: #fff;
@@ -6278,6 +6279,9 @@ input[type=submit] {
   color: #000;
   display: inline-block;
   cursor: pointer;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -webkit-appearance: none;
 }
 
 @media screen and (min-width: 830px) {
